# steria

./: .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile-tests  README.md  openapi.yml  pyproject.toml  requirements.txt  run.sh  steria.py
doc/: README.md  architecture.md  codesyle.md  devinfo.md  git.md  news.md  structure.md  trello.md
page_example/: example.html  example2.html
scripts/: check.sh
src/: api.py  house.py
steria/: settings.py
steriaserver/: HouseManager.py  __init__.py  api.py  dialogflowapi.py  houselib.py  routes.py
tests/: conftest.py  test_smoke.py
