[tool.poetry]
name = "steria"
version = "0.2.0"
description = "server for steria project"
authors = ["pen-dev <pelipenkovladislav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
pytest = "^6.2.2"
sentry-sdk = "^1.0.0"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
